--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.4.32.Final</version>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.5.7.Final</version>
         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.2.224</version>
+            <version>1.4.200</version>
         </dependency>
     </dependencies>
 
